--- a/src/Teams/COD/COD.css
+++ b/src/Teams/COD/COD.css
@@ -1,8 +1,62 @@
 .bg-wrapper {
-  background-image: url("/src/images/MW3-hero.jpeg"); /* The image used */
-  background-color: #cccccc; /* Used if the image is unavailable */
-  height: 100vh; /* You must set a specified height */
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
+  background-image: url("/src/images/MW3-hero.jpeg");
+  background-color: rgba(204, 204, 204, 0);
+  height: 95vh;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.logo {
+  display: flex;
+  height: 100px;
+  padding-top: 200px;
+  padding-left: 200px;
+  padding-bottom: 20px;
+}
+
+.bg-container{
+  background-color: black;
+}
+.text-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column; 
+  align-items: flex-start;
+  padding-left: 20px; 
+}
+
+.info-text {
+  color: white;
+  font-size: 28px;
+  padding-top: 20px;
+}
+
+.roster-section {
+  flex: 1; 
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; 
+  padding-left: 20px;
+  color: white;
+}
+
+
+@media screen and (max-width: 600px) {
+  .bg-wrapper {
+    height: 50vh; /* Adjust the height for smaller screens */
+  }
+
+  .logo,
+  .text-container,
+  .roster-section {
+    padding-left: 13px; /* Adjust padding for smaller screens */
+    display: block;
+    text-align: center;
+  }
+
+  .info-text {
+    text-align: center; /* Center text for smaller screens */
+  }
 }
